light/dark mode fixed

--- a/assets/style.css
+++ b/assets/style.css
@@ -15,7 +15,13 @@ body {
 .dark-mode {
   background-image: none;
   background-color: #f5f5f5 !important;
-  color: #0e1116;
+  color: #0e1116 !important;
+}
+
+.dark-mode .social-links {
+  background-image: none;
+  background-color: #f5f5f5 !important;
+  color: #0e1116 !important;
 }
 
 .card {
@@ -277,6 +283,7 @@ input:checked + .slider:before {
 .social-links {
   text-decoration: none;
   cursor: pointer;
+  color: white;
 }
 
 .email {
